# cpplog

./: .clang-format  CMakeLists.txt  README.md  conanfile.txt  package.json
cpplog/: CMakeLists.txt
cpplog/include/: ILoggingBackend.hpp  cpplog.hpp  severity.hpp
cpplog/include/internal/: ConsoleLoggingBackend.hpp  FileLoggingBackend.hpp  Severity.hpp
cpplog/src/: cpplog.cpp
cpplog/src/internal/: ConsoleLoggingBackend.cpp  FileLoggingBackend.cpp
src/: main.cpp
